# furrifier-skyrim

./: .gitignore  README.md  RELEASE_NOTES.md  furrify_skyrim.spec  launcher.py  launcher_gui.py  pyproject.toml
native/: build_bc7enc.cmd
native/bc7enc/: bc7enc_wrapper.c
races/: user_races.toml  yas_cellanrace.toml  yas_deerrace.toml  yas_horserace.toml  yas_minorace.toml  yas_races.toml
schemes/: all_races.toml  all_races_test.toml  cats_dogs.toml  legacy.toml  ungulate_test.toml  user.toml
scripts/: find_missing_assets.py
src/furrifier/: __init__.py  _pyn.py  armor.py  config.py  context.py  furry_load.py  gui.py  headparts.py  main.py  models.py  npc.py  race_defs.py  schlongs.py  session.py  session_cache.py  setup.py  tints.py  util.py  vanilla_setup.py
tests/facegen/: .gitignore  assemble_from_headparts.py  assemble_spike.py  build_fixtures.py  composite_tint.py  phase2a_pillow_dds.py  restore_game_originals.py  stage_to_sandbox.py  test_asset_resolver.py  test_compositor_resilience.py  test_extract.py  test_facegen_limit.py  test_facegen_pipeline.py  test_live_pipeline.py  test_mask_cache.py  test_only_npc.py  test_patch_injection.py  test_skin_tint_color.py  test_texconv_batch.py  texconv_wrapper.py
tests/integration/: conftest.py  test_armor_furrification.py  test_breeds_npc_race.py  test_gui.py  test_leveled_npcs.py  test_mino_horns.py  test_npc_furrification.py  test_preview_pane.py  test_preview_skin_tint.py  test_race_furrification.py  test_schlong_furrification.py  test_session.py
tests/unit/: test_breed_tints.py  test_breeds.py  test_npc.py  (+12 more)
(+22 files in other folders)
