[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "furrifier-skyrim"
version = "0.1.0"
description = "Batch-convert Skyrim NPCs to furry races"
requires-python = ">=3.10"
dependencies = ["esplib"]

[project.scripts]
furrifier = "furrifier.main:main"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
