[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "furrifier-skyrim"
version = "1.1.0"
description = "Batch-convert Skyrim NPCs to furry races"
requires-python = ">=3.11"
dependencies = ["esplib", "PySide6>=6.8"]

[project.scripts]
furrifier = "furrifier.main:main"

[project.gui-scripts]
furrifier-gui = "furrifier.gui:main"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/facegen"]
